Fix jump to links on mobile

--- a/web/styles/core.scss
+++ b/web/styles/core.scss
@@ -86,7 +86,7 @@ svg {
 
 .sticky-section-header {
   background-color: var(--color-almondmilk);
-  padding: var(--spacing-4) var(--spacing-5);
+  padding: var(--spacing-4) 0;
   font-family: "Strike";
   position: sticky;
   top: 0;
